test/errors/type/str/tostr-format.yasl
mt.lookup('', .tostr)('abc', 1)
